border line no longer crosses over contact us form, fixed minor tag placement and quotation syntax, centered Contact Us, fixed spacing at bottom of page

--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ h5 {
 
 #mainWrapper {
 	width:100%;
-	height:110%;
+	height:125%;
 	border-bottom: 1px solid #212326;
 
 }
